<resources>
    <string name="home">خانه</string>
    <string name="management">مدیریت کسب و کار ها</string>
    <string name="invite_friends">دعوت از دوستان</string>
    <string name="send_feedback">ارسال بازخورد</string>
    <string name="app_info">چارسو مسیری آسان به سوی کسب و کارهایی که می پسندید</string>
    <string name="Sat">شنبه</string>
    <string name="Sun">یکشنبه</string>
    <string name="Week_"></string>
    <string name="Mon">دوشنبه</string>
    <string name="Tue">سه شنبه</string>
    <string name="Wed">چهارشنبه</string>
    <string name="Thr">پنچشنبه</string>
    <string name="Fri">جمعه</string>
    <string name="Ordibehesht">اردیبهشت</string>
    <string name="Farvardin">فروردین</string>
    <string name="Khordad">خرداد</string>
    <string name="Tir">تیر</string>
    <string name="Mordad">مرداد</string>
    <string name="Shahrivar">شهریور</string>
    <string name="Mehr">مهر</string>
    <string name="Aban">آبان</string>
    <string name="Azar">آذر</string>
    <string name="Dey">دی</string>
    <string name="Bahman">بهمن</string>
    <string name="Esfand">اسفند</string>
    <string name="app_name">4SOO</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="exception_code">Exception Code: </string>
    <string name="download_storage_path">/Charsoo/cache/images</string>
    <string name="image_file_path">/Image/</string>
    <string name="exit_app">خروج</string>
    <string name="popup_exit_app">خروج از نرم افزار؟</string>
    <string name="search">جستجو</string>
    <string name="search_title">عنوان جستجو</string>
    <string name="products">محصولات</string>
    <string name="product">محصول</string>
    <string name="enter_search_keywords">متنی را جهت جستجو وارد نمایید.</string>
    <string name="activate_location_services">آیا مایلید جهت تشخیص موقعیت شما، سرویس مکان یابی گوشی خود را فعال کنید؟</string>
    <string name="no_location_found">مکانی انتخاب نشده است، آیا مایلید از روی نقشه مکانی را انتخاب کنید؟</string>
    <string name="profile">حساب کاربری</string>
    <string name="profile_edit_profile">ویرایش حساب</string>
    <string name="old_password">رمز عبور قبلی</string>
    <string name="new_password">رمز عبور جدید</string>
    <string name="change_password">تغییر رمز عبور</string>
    <string name="password_will_change">کلمه ی عبور پس از ذخیره ی تغییرات تغییر خواهد یافت.</string>
    <string name="email_will_change">آدرس ایمیل پس از ذخیره ی تغییرات تغییر خواهد یافت.</string>
    <string name="login">ورود</string>
    <string name="email">ایمیل</string>
    <string name="password">رمز عبور</string>
    <string name="forgot_password_sent">کلمه ی عبور شما از طریق ایمیل برایتان ارسال خواهد شد.</string>
    <string name="register">ثبت نام</string>
    <string name="register_business">ثبت نام کسب و کار</string>
    <string name="forgot_password">فراموشی رمز عبور</string>
    <string name="username">نام کاربری</string>
    <string name="user_identifier">نام کاربری کاربر</string>
    <string name="name">نام</string>
    <string name="password_repeat">تکرار رمز عبور</string>
    <string name="save">ذخیره</string>
    <string name="help">راهنما</string>
    <string name="invalid_image_id">BaseAdapterItem.imageId is invalid</string>
    <string name="invalid_id">BaseAdapterItem.id is invalid</string>
    <string name="identifier_is_too_long">BaseAdapterItem.title length is greater than limit. The limit is 25</string>
    <string name="invalid_image_id_code">001</string>
    <string name="identifier_is_too_long_code">002</string>
    <string name="invalid_id_code">003</string>
    <string name="enter_valid_username">نام کاربری حدأقل 4 حرفی بوده و تنها می تواند از حروف انگلیسی, اعداد, . یا _ تشکیل شود.</string>
    <string name="enter_valid_business_id">شناسه ی کسب و کار حدأقل 4 حرفی بوده و تنها می تواند از حروف انگلیسی, اعداد, . یا _ تشکیل شود.</string>
    <string name="enter_valid_name">نام حدأقل 3 حرفی بوده و تنها می تواند از حروف انگلیسی و فارسی, اعداد, فاصله, . یا _ تشکیل شود.</string>
    <string name="enter_valid_comment_lenth">حداقل 2 حرف</string>
    <string name="enter_valid_title">عنوان حداقل سه حرفی بوده و می تواند تنها متشکل از حروف فارسی و انگلیسی باشد</string>
    <string name="enter_valid_city">نام شهر باید تنها متشکل از حروف فارسی باشد</string>
    <string name="enter_valid_about_me">متن درباره من حداقل باید 3 حرف باشد</string>
    <string name="enter_valid_email">لطفأ آدرس ایمیل را به طور صحیح وارد نمایید.</string>
    <string name="enter_password_5_digits">لطفأ رمز عبور حدأقل 5 رقمی را وارد نمایید.</string>
    <string name="enter_same_passwords">رمز های عبور وارد شده مطابقت ندارند.</string>
    <string name="enter_correct_value">مقدار ناصحیح</string>
    <string name="enter_correct_website">آدرس وب سایت را درست وارد کنید</string>
    <string name="enter_non_empty_value">مقدار وارد کنید</string>
    <string name="enter_correct_hour">مقدار مجاز بین 1 الی 24 می باشد</string>
    <string name="fill">این فیلد را پر کنید</string>
    <string name="enter_correct_minute">مقدار مجاز بین 1 الی 59 می باشد</string>
    <string name="enter_correct_year">چهار رقم وارد کنید</string>
    <string name="enter_is_too_long">طولانی تر از حد مجاز می باشد.</string>
    <string name="enter_valid_price">قیمت محصول را به صورت عدد وارد نمایید.</string>
    <string name="comment_is_too_short">نظر خود را با حدأقل 3 حرف وارد کنید.</string>
    <string name="choose_category_first">لطفأ موضوع فعالیت کسب و کار خود را تعیین نمایید.</string>
    <string name="ok">تأیید</string>
    <string name="enter_business_description">لطفأ توضیحاتی در خصوص کسب و کار وارد نمایید.</string>
    <string name="err_business_does_not_exist">BUSINESS DOES NOT EXIST! Error:04</string>
    <string name="err_post_does_not_exist">POST DOES NOT EXIST! Error:05</string>
    <string name="err_json_serialization">CAN NOT SERIALIZE TO JSON! Error:06</string>
    <string name="err_further_development">Need Further Development! Error:07</string>
    <string name="err_empty_post_request">EMPTY OR INVALID BODY FOR POST REQUEST! Error:08</string>
    <string name="err_invalid_base64_string">INVALID BASE64 STRING! Error:09</string>
    <string name="err_database_constraints_violation">DATA BASE CONSTRAINTS VIOLATION! Error: 10</string>
    <string name="err_block_does_not_exist">BLOCK DOES NOT EXIST! Error: 11</string>
    <string name="err_user_businesses_not_exist">شما کسب و کاری ثبت نکرده اید</string>
    <string name="err_choose_one_state">ااستان را انتخاب کنید</string>
    <string name="err_choose_city">لطفا شهر را انتخاب کنید</string>
    <string name="err_choose_location">محل کسب و کار خود را بر روی نقشه مشخص نمایید</string>
    <string name="err_choose_location_search">محدوده مکان جستجوی خود را مشخص کنید</string>
    <string name="err_comment_does_not_exist">COMMENT DOES NOT EXIST! Error: 12</string>
    <string name="err_follow_already_exist">FOLLOW ALREADY EXISTS! Error: 13</string>
    <string name="err_follow_does_not_exist">FOLLOW DOES NOT EXIST! Error: 14</string>
    <string name="err_friend_request_does_not_exist">FRIEND REQUEST DOES NOT EXIST! Error: 15</string>
    <string name="err_image_does_not_exist">IMAGE DOES NOT EXIST! Error: 16</string>
    <string name="err_no_rate">NO RATE! Error: 17</string>
    <string name="err_no_review">NO REVIEW! Error: 18</string>
    <string name="err_login_password_re_enter">رمز عبور و تکرار آن یکسان نیستند.</string>
    <string name="err_login_password_short">رمز عبور باید حداقل 6 کاراکتر باشد.</string>
    <string name="err_login_email_invalid">آدرس ایمیل نامعتبر است.</string>
    <string name="err_login_account_name_long">تعداد کاراکترهای نام کاربری بیش از حد مجاز است.</string>
    <string name="err_login_name_long">تعداد کاراکترهای نام بیش از حد مجاز است.</string>
    <string name="err_login_about_me_long">تعداد کاراکترهای درباره من بیش از حد مجاز است.</string>
    <string name="err_login_server">خطای برقرار ارتباط با سرور.</string>
    <string name="err_login_password_incorrect">رمز عبور اشتباه است. مجددا سعی نمایید</string>
    <string name="err_login_email_incorrect">چنین آدرس پست الکترونیکی ثبت نشده است. مجددا سعی نمایید</string>
    <string name="err_profile_edit_password_old_incorrect">رمز عبور صحیح نمی باشد.</string>
    <string name="err_set_picture">لطفأ تصویری را انتخاب کنید.</string>
    <string name="err_execution">خطای اجرایی \n\n کد:2-</string>
    <string name="err_network_connection">اتصال اینترنت وجود ندارد. لطفا پس از اتصال مجددا سعی کنید</string>
    <string name="err_none">None</string>
    <string name="err_unknown">UNKNOW ERROR! Error:00</string>
    <string name="err_database_connection">ارتباط برقرار نشد. مجددا سعی نمایید</string>
    <string name="err_user_dose_not_exist">آدرس ایمیل وارد شده اشتباه است</string>
    <string name="err_password_incorrect">رمز عبور اشتباه است</string>
    <string name="err_location">لطفأ موقعیت کسب و کار خود را تعیین کنید.</string>
    <string name="err_creation_date_invalid">آینده!</string>
    <string name="err_choose_spinner_item">دسته بندی و زیر دسته بندی را انتخاب کنید</string>
    <string name="err_choose_days">روزهای کاری را انتخاب کنید</string>
    <string name="err_time_open_smaller_than_close">ساعت پایان کار قبل از ساعت شروع کار است</string>
    <string name="err_time_open_equal_close">ساعت شروع و پایان کار یکسان است</string>
    <string name="err_permission_businesses">کاربر مورد نظر اجازه مشاهده لیست کسب و کارهای دنبال شده خود را به دوستان اعطا نکرده است</string>
    <string name="err_permission_friends">کاربر مورد نظر اجازه مشاهده لیست دوستان خود را به دوستان اعطا نکرده است</string>
    <string name="err_permission_reviews">کاربر مورد نظر اجازه مشاهده لیست نقدهای انجام شده خود را به دوستان اعطا نکرده است</string>
    <string name="err_map_loading">خطای بارگزاری نقشه</string>
    <string name="err_map_loading_description">جهت نمایش نقشه نرم افزار Google Play Store را نصب و یا به روز رسانی کنید و مجددا سعی کنید.</string>
    <string name="err">خطا</string>
    <string name="err_location_service_title">سرویس های مکان یابی</string>
    <string name="err_fill_search_box">لطفا متن جستجو را وارد کنید.</string>
    <string name="err_location_service_body">تنظیمات مربوط به سرویس های مکان یابی فعال نشده است. آیا مایل به مشاهده تنظیمات هستید؟</string>
    <string name="ops">ناممکن</string>
    <string name="install_now">نصب نرم افزار</string>
    <string name="share">به اشتراک گذاری</string>
    <string name="report">گزارش تخلف</string>
    <string name="edit">ویرایش</string>
    <string name="retrieval">بازیابی</string>
    <string name="edit_profile">ویراش پروفایل</string>
    <string name="delete">حذف</string>
    <string name="choose_category">دسته بندی را انتخاب کنید</string>
    <string name="business_name">نام کسب و کار</string>
    <string name="phone">تلفن تماس</string>
    <string name="website">وب سایت</string>
    <string name="mobile">تلفن همراه</string>
    <string name="submit">ثبت</string>
    <string name="product_code">کد کالا</string>
    <string name="identifier_business">شناسه کاربری (انگلیسی)</string>
    <string name="description">توضیحات</string>
    <string name="subcategory">زیر دسته بندی</string>
    <string name="category">دسته بندی</string>
    <string name="work_time">تنظیم ساعت کاری</string>
    <string name="city">شهر</string>
    <string name="street">آدرس کامل</string>
    <string name="location_on_map">موقعیت روی نقشه</string>
    <string name="choose_location_on_map">انتخاب موقعیت بر روی نقشه</string>
    <string name="title">عنوان</string>
    <string name="price_tooman">قیمت (تومان)</string>
    <string name="hashtags">هشتگ (مثل: #کتاب)</string>
    <string name="hashtag_guide">هشتگ ها جهت جستجو مورد استفاده قرار می گیرند.</string>
    <string name="play_services_guide">جهت ثبت دقیق آدرس کسب و کار بر روی نقشه نرم افزار Google Play Services را نصب کنید.</string>
    <string name="choose_subcategory">زیر دسته بندی را انتخاب کنید</string>
</resources>