<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp">

            <ImageView
                android:layout_width="@dimen/register_profile_picture_height"
                android:layout_height="@dimen/register_profile_picture_height"
                android:id="@+id/imageView_picture"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_take_business_picture" />

            <ir.rasen.charsoo.view.widget_customized.EditTextFont
                android:id="@+id/edt_identifier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/identifier_business"
                android:layout_marginTop="20dp"
                android:gravity="right|center_vertical"
                android:textColor="@color/Black"
                android:maxLength="@integer/restriction_identifier_length"
                android:singleLine="true" />


            <ir.rasen.charsoo.view.widget_customized.EditTextFont
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/business_name"
                android:layout_marginTop="20dp"
                android:gravity="right|center_vertical"
                android:textColor="@color/Black"
                android:maxLength="@integer/restriction_identifier_length"
                android:singleLine="true" />




            <ir.rasen.charsoo.view.widget_customized.TextViewFont
                android:id="@+id/textView_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_edit_text_back"
                android:gravity="right" />

            <ir.rasen.charsoo.view.widget_customized.TextViewFont
                android:id="@+id/textView_sub_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/subcategory"
                android:background="@drawable/shape_edit_text_back"
                android:gravity="right" />

            <ir.rasen.charsoo.view.widget_customized.EditTextFont
                android:id="@+id/edt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:layout_marginTop="20dp"
                android:gravity="right|center_vertical"
                android:textColor="@color/Black"
                android:maxLength="@integer/restriction_description" />

            <ir.rasen.charsoo.view.widget_customized.EditTextFont
                android:id="@+id/edt_hashtags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hashtags"
                android:layout_marginTop="20dp"
                android:gravity="right|center_vertical"
                android:textColor="@color/Black"

                android:maxLength="@integer/restriction_description"
                android:singleLine="true" />

            <ir.rasen.charsoo.view.widget_customized.TextViewFont
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/hashtag_guide"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="5dp"
                android:gravity="right" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"/>




        </LinearLayout>

    </ScrollView>

</RelativeLayout>