<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingTop="50dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="100"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_Category"
                    android:gravity="center_vertical|center_horizontal"
                    android:entries="@array/categories_default"
                    android:background="@drawable/shape_edit_text_back"
                    android:prompt="@string/choose_category"
                    android:spinnerMode="dialog"
                    style="@style/spinner_style" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:weightSum="100"
                android:layout_marginTop="15dp">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_Subcategory"
                    android:entries="@array/subcategories_default"
                    android:gravity="center_vertical|center|center_horizontal"
                    android:background="@drawable/shape_edit_text_back"
                    android:prompt="@string/choose_subcategory"
                    style="@style/spinner_style"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <ir.rasen.charsoo.view.widgets.EditTextFont
                android:id="@+id/edt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="@color/Black"
                android:maxLength="@integer/restriction_description" />

            <ir.rasen.charsoo.view.widgets.EditTextFont
                android:id="@+id/edt_hashtags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hashtags"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="@color/Black"

                android:maxLength="@integer/restriction_description"
                android:singleLine="true" />

            <ir.rasen.charsoo.view.widgets.TextViewFont
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/hashtag_guide"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical|center_horizontal" />




        </LinearLayout>
    </ScrollView>


</LinearLayout>
